@@ -2,6 +2,8 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+	- Gather orders after a certain time with list_orders({since => $timestamp})
+
 0.18 2017-03-05T17:28:26Z
 
     - Add ::Robinhood::fundamentals(...) function/->fundamentals(...) method
